increasing color contrast to resolve accessibility violation

--- a/public/style/styles-compiler.scss
+++ b/public/style/styles-compiler.scss
@@ -9,8 +9,8 @@ $gray-lighter: rgb(248,248,248);
 $gray-lightest: rgb(248,248,248);
 $site-background: $gray-lightest;
 
-$blue: #4990E2;
-$blue-darker: #2B598E;
+$blue: #2B598E;
+$blue-darker: darken($blue, 15%);
 
 $fallback-unit-spacing: 8px;
 $unit-spacing: .5em;
